--- a/config/org.dita.dost.platform/plugin.properties
+++ b/config/org.dita.dost.platform/plugin.properties
@@ -1,6 +1,6 @@
 #DITA-OT runtime configuration, do not edit manually
-#Wed May 10 15:32:49 IST 2023
-print_transtypes=print-pdf;pdf;pdf2
+#Wed May 10 17:34:50 IST 2023
+print_transtypes=print-pdf;pdf;pdf2;customplugin
 plugin.com.example.print-pdf.dir=plugins\\com.example.print-pdf
 parser.md=com.elovirta.dita.markdown.MarkdownReader
 plugin.org.dita.html5.dir=plugins\\org.dita.html5
@@ -13,12 +13,13 @@ supported_resource_extensions=.pdf;.swf
 parser.mdita=com.elovirta.dita.markdown.MDitaReader
 supported_html_extensions=.html;.htm
 plugin.org.dita.pdf2.xep.dir=plugins\\org.dita.pdf2.xep
+plugin.com.example.customplugin.dir=plugins\\com.example.customplugin
 parser.markdown=com.elovirta.dita.markdown.MarkdownReader
 plugin.org.dita.xhtml.dir=plugins\\org.dita.xhtml
 supported_image_extensions=.gif;.svg;.bmp;.jpg;.tif;.eps;.jpeg;.png;.tiff
 plugin.org.dita.base.dir=plugins\\org.dita.base
 plugin.org.oasis-open.dita.techcomm.v2_0.dir=plugins\\org.oasis-open.dita.techcomm.v2_0
-transtypes=pdf;pdf2;print-pdf;xhtml;eclipsehelp;html5;htmlhelp;dita;markdown;markdown_github;markdown_gitbook
+transtypes=pdf;pdf2;customplugin;print-pdf;xhtml;eclipsehelp;html5;htmlhelp;dita;markdown;markdown_github;markdown_gitbook
 plugin.org.dita.pdf2.axf.dir=plugins\\org.dita.pdf2.axf
 plugin.org.dita.index.dir=plugins\\org.dita.index
 plugin.org.lwdita.dir=plugins\\org.lwdita
